--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "bootstrap": "^4.6.0",
         "browser-sync": "^2.26.14",
         "framer-motion": "^3.10.5",
+        "howler": "^2.2.1",
         "lodash": "^4.17.21",
         "lodash-move": "^1.1.1",
         "react": "^17.0.1",
@@ -20,6 +21,7 @@
         "react-use-gesture": "^9.1.3",
         "react-with-gesture": "^4.0.8",
         "styled-components": "^5.2.1",
+        "use-sound": "^2.0.1",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
@@ -47,6 +49,7 @@
         ]
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.168"
+        "@types/lodash": "^4.14.168",
+        "file-loader": "^6.2.0"
     }
 }
